# bank2mqtt

./: .gitignore  Dockerfile  LOGGING.md  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
bank2mqtt/: __main__.py  cache.py  client.py  config.py  constants.py  db.py  logging.py
bank2mqtt/handlers/: email.py  handler.py  mqtt.py  ntfy.py  webhook.py
docker_compose/mosquitto/config/: mosquitto.conf
tests/: __init__.py  conftest.py  test_cli_run.py
